--- a/Data processing.ipynb
+++ b/Data processing.ipynb
@@ -3,240 +3,186 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-01T08:59:34.470367Z",
-     "start_time": "2024-07-01T08:59:31.268073Z"
+     "end_time": "2024-07-01T19:03:47.467300Z",
+     "start_time": "2024-07-01T19:03:47.298863Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "import tensorflow as tf\n",
+    "import os\n",
+    "import numpy as np\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
-    "print(\"Num GPUs Available: \", len(tf.config.experimental.list_physical_devices('GPU')))\n"
+    "\n",
+    "def load_data(data_dir):\n",
+    "    data = []\n",
+    "    labels = []\n",
+    "    for label in os.listdir(data_dir):\n",
+    "        label_dir = os.path.join(data_dir, label)\n",
+    "        if os.path.isdir(label_dir):\n",
+    "            frames = []\n",
+    "            for file in sorted(os.listdir(label_dir)):\n",
+    "                if file.endswith('.npy'):\n",
+    "                    frame_data = np.load(os.path.join(label_dir, file))\n",
+    "                    frames.append(frame_data)\n",
+    "            data.append(frames)\n",
+    "            labels.append(label)\n",
+    "    return data, labels\n",
+    "\n",
+    "data_dir = 'data'  # Adjust this path\n",
+    "data, labels = load_data(data_dir)\n",
+    "\n",
+    "def normalize_data(data):\n",
+    "    normalized_data = []\n",
+    "    for sequence in data:\n",
+    "        norm_sequence = []\n",
+    "        for frame in sequence:\n",
+    "            norm_frame = (frame - np.min(frame, axis=0)) / (np.max(frame, axis=0) - np.min(frame, axis=0))\n",
+    "            norm_sequence.append(norm_frame)\n",
+    "        normalized_data.append(norm_sequence)\n",
+    "    return normalized_data\n",
+    "\n",
+    "normalized_data = normalize_data(data)\n",
+    "\n",
+    "\n",
+    "def pad_truncate_sequences(data, max_len):\n",
+    "    padded_data = tf.keras.preprocessing.sequence.pad_sequences(data, maxlen=max_len, dtype='float32', padding='post', truncating='post')\n",
+    "    return padded_data\n",
+    "\n",
+    "max_sequence_length = 150  # Set this to a reasonable number based on your data\n",
+    "padded_data = pad_truncate_sequences(normalized_data, max_sequence_length)\n",
+    "\n",
+    "\n",
+    "label_encoder = LabelEncoder()\n",
+    "encoded_labels = label_encoder.fit_transform(labels)\n",
+    "np.save('classes.npy', label_encoder.classes_)\n",
+    "\n",
+    "X_train = padded_data\n",
+    "y_train = encoded_labels\n",
+    "\n",
+    "\n",
+    "print(f'Training data shape: {X_train.shape}')\n",
+    "print(f'Training labels shape: {y_train.shape}')\n"
    ],
-   "id": "25a7d667b98d0ba0",
+   "id": "b88ef6fe7f620bd5",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Num GPUs Available:  0\n"
+      "Training data shape: (8, 150, 21, 3)\n",
+      "Training labels shape: (8,)\n"
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 24
   },
   {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": "Preprocessing the Data",
-   "id": "139de5476dcaf008"
-  },
-  {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-01T19:04:28.168154Z",
+     "start_time": "2024-07-01T19:04:22.269990Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": [
-    "import numpy as np\n",
-    "import os\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import LabelBinarizer\n",
-    "\n",
-    "def load_data(data_dir):\n",
-    "    X = []\n",
-    "    y = []\n",
-    "    labels = sorted(os.listdir(data_dir))\n",
-    "    \n",
-    "    for label in labels:\n",
-    "        label_dir = os.path.join(data_dir, label)\n",
-    "        sequences = []\n",
-    "        \n",
-    "        for file in sorted(os.listdir(label_dir)):\n",
-    "            if file.endswith('.npy'):\n",
-    "                frame = np.load(os.path.join(label_dir, file))\n",
-    "                sequences.append(frame)\n",
-    "        \n",
-    "        if sequences:\n",
-    "            X.append(np.array(sequences))\n",
-    "            y.append(label)\n",
-    "    \n",
-    "    return np.array(X), np.array(y)\n",
-    "\n",
-    "# Load and preprocess the data\n",
-    "data_dir = 'data'\n",
-    "X, y = load_data(data_dir)\n",
-    "\n",
-    "# Ensure there are enough samples to split\n",
-    "if len(X) < 2:\n",
-    "    raise ValueError(\"Not enough samples to split into training and testing sets.\")\n",
-    "\n",
-    "# Normalize the data\n",
-    "X = X / np.max(X)\n",
-    "\n",
-    "# Encode labels\n",
-    "lb = LabelBinarizer()\n",
-    "y = lb.fit_transform(y)\n",
-    "\n",
-    "# Split the data\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
-    "print(f\"Training data shape: {X_train.shape}\")\n",
-    "print(f\"Test data shape: {X_test.shape}\")\n",
-    "print(f\"Labels shape: {y_train.shape}\")\n"
-   ],
-   "id": "46ac945803863528"
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": "Normalise data",
-   "id": "68060331be39f729"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": [
-    "import numpy as np\n",
-    "import os\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import LabelBinarizer\n",
-    "\n",
-    "def load_data(data_dir):\n",
-    "    X = []\n",
-    "    y = []\n",
-    "    labels = sorted(os.listdir(data_dir))\n",
-    "    \n",
-    "    for label in labels:\n",
-    "        label_dir = os.path.join(data_dir, label)\n",
-    "        sequences = []\n",
-    "        \n",
-    "        for file in sorted(os.listdir(label_dir)):\n",
-    "            if file.endswith('.npy'):\n",
-    "                frame = np.load(os.path.join(label_dir, file))\n",
-    "                sequences.append(frame)\n",
-    "        \n",
-    "        if sequences:\n",
-    "            X.append(np.array(sequences))\n",
-    "            y.append(label)\n",
-    "    \n",
-    "    return np.array(X), np.array(y)\n",
-    "\n",
-    "# Load and preprocess the data\n",
-    "data_dir = 'data'\n",
-    "X, y = load_data(data_dir)\n",
-    "\n",
-    "# Ensure there are enough samples to split\n",
-    "if len(X) < 2:\n",
-    "    raise ValueError(\"Not enough samples to split into training and testing sets.\")\n",
-    "\n",
-    "# Normalize the data\n",
-    "X = X / np.max(X)\n",
-    "\n",
-    "# Encode labels\n",
-    "lb = LabelBinarizer()\n",
-    "y = lb.fit_transform(y)\n",
-    "\n",
-    "# Split the data\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
-    "print(f\"Training data shape: {X_train.shape}\")\n",
-    "print(f\"Test data shape: {X_test.shape}\")\n",
-    "print(f\"Labels shape: {y_train.shape}\")\n"
-   ],
-   "id": "c0c49123ae42b25d"
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": "Defining the Model",
-   "id": "cb68aed5004e1bb0"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "import tensorflow as tf\n",
-    "from tensorflow.keras import Sequential\n",
-    "from tensorflow.keras.layers import Conv2D, MaxPooling2D, TimeDistributed, Flatten, LSTM, Dense, Dropout\n",
+    "from tensorflow.keras.layers import LSTM, Dense, TimeDistributed, LSTM, Input\n",
     "\n",
-    "# Define the model\n",
-    "model = Sequential([\n",
-    "    TimeDistributed(Conv2D(32, (3, 3), activation='relu'), input_shape=(None, X_train.shape[2], X_train.shape[3], 1)),\n",
-    "    TimeDistributed(MaxPooling2D((2, 2))),\n",
-    "    TimeDistributed(Conv2D(64, (3, 3), activation='relu')),\n",
-    "    TimeDistributed(MaxPooling2D((2, 2))),\n",
-    "    TimeDistributed(Conv2D(128, (3, 3), activation='relu')),\n",
-    "    TimeDistributed(MaxPooling2D((2, 2))),\n",
-    "    TimeDistributed(Flatten()),\n",
-    "    LSTM(128, return_sequences=True),\n",
-    "    Dropout(0.5),\n",
-    "    LSTM(128),\n",
-    "    Dropout(0.5),\n",
-    "    Dense(256, activation='relu'),\n",
-    "    Dropout(0.5),\n",
-    "    Dense(y_train.shape[1], activation='softmax')\n",
+    "# Reshape the data to (batch_size, timesteps, features)\n",
+    "X_reshaped = X_train.reshape((X_train.shape[0], X_train.shape[1], -1))\n",
+    "\n",
+    "# Define the LSTM model\n",
+    "model = tf.keras.models.Sequential([\n",
+    "    Input(shape=(X_reshaped.shape[1], X_reshaped.shape[2])),\n",
+    "    LSTM(64, return_sequences=True),\n",
+    "    LSTM(64),\n",
+    "    Dense(64, activation='relu'),\n",
+    "    Dense(len(label_encoder.classes_), activation='softmax')\n",
     "])\n",
     "\n",
-    "# Compile the model\n",
-    "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "model.compile(optimizer='adam', loss='sparse_categorical_crossentropy', metrics=['accuracy'])\n",
     "\n",
-    "# Model summary\n",
-    "model.summary()\n"
+    "# Train the model on the entire dataset\n",
+    "history = model.fit(X_reshaped, y_train, epochs=20)\n",
+    "\n"
    ],
-   "id": "9621b8ba6bd50598"
+   "id": "4fca5eeb53ac4b14",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/20\n",
+      "\u001B[1m1/1\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m3s\u001B[0m 3s/step - accuracy: 0.1250 - loss: 2.0706\n",
+      "Epoch 2/20\n",
+      "\u001B[1m1/1\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m0s\u001B[0m 132ms/step - accuracy: 0.0000e+00 - loss: 2.0361\n",
+      "Epoch 3/20\n",
+      "\u001B[1m1/1\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m0s\u001B[0m 124ms/step - accuracy: 0.2500 - loss: 2.0026\n",
+      "Epoch 4/20\n",
+      "\u001B[1m1/1\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m0s\u001B[0m 123ms/step - accuracy: 0.2500 - loss: 1.9702\n",
+      "Epoch 5/20\n",
+      "\u001B[1m1/1\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m0s\u001B[0m 132ms/step - accuracy: 0.2500 - loss: 1.9391\n",
+      "Epoch 6/20\n",
+      "\u001B[1m1/1\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m0s\u001B[0m 148ms/step - accuracy: 0.2500 - loss: 1.9105\n",
+      "Epoch 7/20\n",
+      "\u001B[1m1/1\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m0s\u001B[0m 132ms/step - accuracy: 0.2500 - loss: 1.8844\n",
+      "Epoch 8/20\n",
+      "\u001B[1m1/1\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m0s\u001B[0m 138ms/step - accuracy: 0.2500 - loss: 1.8638\n",
+      "Epoch 9/20\n",
+      "\u001B[1m1/1\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m0s\u001B[0m 148ms/step - accuracy: 0.2500 - loss: 1.8488\n",
+      "Epoch 10/20\n",
+      "\u001B[1m1/1\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m0s\u001B[0m 157ms/step - accuracy: 0.2500 - loss: 1.8379\n",
+      "Epoch 11/20\n",
+      "\u001B[1m1/1\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m0s\u001B[0m 148ms/step - accuracy: 0.2500 - loss: 1.8294\n",
+      "Epoch 12/20\n",
+      "\u001B[1m1/1\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m0s\u001B[0m 149ms/step - accuracy: 0.2500 - loss: 1.8226\n",
+      "Epoch 13/20\n",
+      "\u001B[1m1/1\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m0s\u001B[0m 132ms/step - accuracy: 0.2500 - loss: 1.8164\n",
+      "Epoch 14/20\n",
+      "\u001B[1m1/1\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m0s\u001B[0m 140ms/step - accuracy: 0.2500 - loss: 1.8085\n",
+      "Epoch 15/20\n",
+      "\u001B[1m1/1\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m0s\u001B[0m 144ms/step - accuracy: 0.2500 - loss: 1.7992\n",
+      "Epoch 16/20\n",
+      "\u001B[1m1/1\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m0s\u001B[0m 132ms/step - accuracy: 0.2500 - loss: 1.7902\n",
+      "Epoch 17/20\n",
+      "\u001B[1m1/1\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m0s\u001B[0m 123ms/step - accuracy: 0.2500 - loss: 1.7795\n",
+      "Epoch 18/20\n",
+      "\u001B[1m1/1\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m0s\u001B[0m 145ms/step - accuracy: 0.2500 - loss: 1.7598\n",
+      "Epoch 19/20\n",
+      "\u001B[1m1/1\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m0s\u001B[0m 124ms/step - accuracy: 0.2500 - loss: 1.7445\n",
+      "Epoch 20/20\n",
+      "\u001B[1m1/1\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m0s\u001B[0m 140ms/step - accuracy: 0.2500 - loss: 1.7222\n"
+     ]
+    }
+   ],
+   "execution_count": 25
   },
   {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": "Training the Model",
-   "id": "f37157d0f8c7d0bd"
-  },
-  {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-07-01T19:04:28.217982Z",
+     "start_time": "2024-07-01T19:04:28.168475Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
-    "# Train the model\n",
-    "history = model.fit(X_train, y_train, epochs=50, batch_size=64, validation_data=(X_test, y_test))\n"
+    "# Save the model in the recommended format\n",
+    "model.save('sign_language_model.keras')\n",
+    "\n",
+    "print(\"Model training completed and saved as 'sign_language_model.keras'\")"
    ],
-   "id": "bf2e3a14df4a972d"
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": "Evaluating the Model",
-   "id": "db7d23a136f0405b"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": [
-    "# Evaluate the model\n",
-    "loss, accuracy = model.evaluate(X_test, y_test)\n",
-    "print(f'Accuracy: {accuracy * 100:.2f}%')\n"
+   "id": "deb140f8da8ec93",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model training completed and saved as 'sign_language_model.keras'\n"
+     ]
+    }
    ],
-   "id": "9e80f2f762c3c0ab"
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": " Save the Model",
-   "id": "ae7f3748c383471b"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "model.save('complex_sign_language_model.h5')\n",
-   "id": "fa5eca50956740c7"
+   "execution_count": 26
   }
  ],
  "metadata": {
